home-infra-iac/k8s/home-assistant/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.89
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.example.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: home-assistant-tls
